# project-digital-employee

./: .env  .env.example  .gitignore  .impeccable.md  API_CONFIGURATION.md  API_INTEGRATION_SUMMARY.md  BUG_FIX_REPORT.md  DASHBOARD_DATA_IMPROVEMENT.md  DEPLOYMENT.md  DEVELOPMENT.md  GATEWAY_CONFIG.md  INTEGRATION-COMPLETION-REPORT.md  INTEGRATION-README.md  INTEGRATION_STATUS.md  MISSION_CONTROL_ANALYSIS.md  OPENCLAW_INTEGRATION.md  PROJECT_ENHANCEMENT_REPORT.md  PROJECT_STATUS.md  README.md  SKILLS_REFACTOR_PLAN.md  TASKCENTER_GATEWAY.md  TEAM.md  agent-status-sync-v2.sh  deploy.sh  index.html  openclaw.json  package-lock.json  package.json  research.md  restore-original.sh  start-all-services.sh  start-analysis-dev.sh  start-dev.sh  start-integrated-services.sh  start.sh  stop-all-services.sh  stop-analysis-dev.sh  stop-integrated-services.sh  test-apis.sh  tsconfig.json  (+6 more)
.claude/: settings.local.json
Star-Office-UI/: .gitignore  LICENSE  README.en.md  README.ja.md  README.md  SKILL.md  agent-invite-template.txt  asset-defaults.json  asset-positions.json  convert_to_webp.py  gif_to_spritesheet.py  healthcheck.sh  join-keys.sample.json  office-agent-push.py  pyproject.toml  repack_star_working.py  resize_map.py  runtime-config.sample.json  set_state.py  state.sample.json  webp_to_spritesheet.py
Star-Office-UI/desktop-pet/src-tauri/: Cargo.toml  tauri.conf.json
Star-Office-UI/desktop-pet/src-tauri/capabilities/: default.json
Star-Office-UI/desktop-pet/src-tauri/icons/: icon.icns
Star-Office-UI/desktop-pet/src-tauri/src/: lib.rs  main.rs
cron/: jobs.json
(+734 files in other folders)
